--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "google-map-react": "^1.1.2",
+    "node-forge": "^0.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   },
